	-Added invalid text color for spell list rendering
2/6/23
	-Changed input handling logic to be cleaner, but require an extra byte of RAM
	-Created arrow that points towards the exit location
2/8/23
	-Removed highlightedIndex, swapping all of its uses with currentBattler
	-Added color to the battlebox when current menu = $81 (targeting enemies)

Known Issues:
	 
TODO:

	-Potentially try to center enemies more precisely?

	-Battle system rewrite
		-High/low battle logic?
		
	-Campfire rendering
		-Give campfire battle-like scene??
		-Give staircase battle-like scene?

	-Rework menu rendering routines
		-Make sure to handle half casters, also GUARD and PARRY in lieu of CAST for knights and rogues respectively
	
	-Make it so that the button enters into the menu when in maze view?
		-Make back button move you backwards while maintaining facing direction

	Overarching questions:	
		-Should there be some sort of rangefinder to the exit? I think so.
			-Hear a "roar" when getting near the boss?
		-Rendering exit and campfire? Rendering campfire should be possible, but I don't know about the exit

	-Invalid text color  + associated logic?
		-Mana implementation
		-Play a corresponding "error" sound effect
	-How is enemy AI going to be stored?
		-Number of action slots, list of actual enemyAction bytes right after --Seems that this is not going to be a viable option anymore
			-This is very simplistic, but as a result is space-efficient
		-Number of action slots, list of meta-enemyActions
			-Meta-enemyActions might be along the lines of "attack", "heal ally", "paralyze enemy", etc.
			-These meta-actions are then converted into actual enemyAction by LDetermineEnemyAI routine
			-More sophisticated, less data space, more code space. Seems like a good idea
			-How smart should this be? Does it prefer to paralyze heavy physical attackers, for instance?
				-Probably not that smart
	-How is encounter data going to be stored?