@@ -338,9 +338,13 @@ RShowEnemyName:
 	sta tempPointer1
 	lda #(RZombieText >> 8 & $FF)
 	sta tempPointer1+1
-	lda REnemySpotColors,x
-	sta COLUPF
+	cpx highlightedLine
+	beq RUseEnemyColor
+	lda #TEXT_COLOR
+	bne RColorLoaded
+RUseEnemyColor:
 	lda REnemyColorLookup,y
+RColorLoaded:
 
 	jsr RDrawBattleMenuLine
 
@@ -1074,19 +1078,6 @@ RCalculateDigitIndices: SUBROUTINE ;Will interpret whatever is in A when called 
 RDrawText: SUBROUTINE ;Will update graphics registers accordingly as long as the sprites are positioned correctly and the pointers set.
 	sta WSYNC
 	ldy #CHARACTER_HEIGHT-1
-	jsr RSpinWheels
-	jsr RSpinWheels
-	nop
-	nop
-	nop
-	nop
-	nop
-	sta RESBL
-	lda currentMenu
-	cmp #$81
-	bne .RTextLoop
-	lda #2
-	sta ENABL
 .RTextLoop
 	sty temp1 ;Stores how many loops are left
 	lda (temp6),y
@@ -1112,12 +1103,10 @@ RDrawText: SUBROUTINE ;Will update graphics registers accordingly as long as the
 	bpl .RTextLoop
 
 	iny
-	sty ENABL
 	sty GRP0 ;Clear player graphics while HP, MP data is being prepared
 	sty GRP1
 	sty GRP0
 	sty GRP1
-	sty ENABL
 	rts	
 
 RIndexToEnemyPosition: SUBROUTINE ;Converts the position of a menu cursor into the correct location in the enemyID array of the target
@@ -1134,12 +1123,6 @@ RIndexToEnemyPosition: SUBROUTINE ;Converts the position of a menu cursor into t
 	jmp .RIndexConversionLoop
 .RDone
 	rts ;Y is the correct offset into the enemyID array
-
-REnemySpotColors:
-	.byte $38
-	.byte $68
-	.byte $98
-	.byte $C8
 
 	ORG $C810 ;Used to hold enemy names, nothing else can go in this section
 	RORG $F810
